# hs-ticker

./: .gitignore  hs-ticker.cabal
src/: Main.hs
